package org.prototype.demo.Facade.Services;

import org.prototype.demo.Facade.Interfaces.IExternalService;
import org.prototype.demo.Facade.Models.*;

import java.net.http.HttpClient;
import java.net.http.HttpRequest;
import java.net.http.HttpResponse;
import java.net.URI;
import java.time.LocalDateTime;
import java.util.List;

public class BookingService implements IExternalService {
    private HttpClient apiClient;
    private Credentials credentials;

    public BookingService(HttpClient apiClient, Credentials credentials) {
        this.apiClient = apiClient;
        this.credentials = credentials;
    }

    @Override
    public List<TripResult> searchTrips(SearchCriteria criteria) {
        // Implement the logic to search for trips using the criteria
        // This is a placeholder implementation
        return List.of(new TripResult("tripId", "destination", criteria.getStartDate(), criteria.getEndDate(), 100.0, "provider", 5));
    }

    @Override
    public BookingConfirmation bookTrip(BookingRequest request) {
        // Implement the logic to book a trip using the request
        // This is a placeholder implementation
        return new BookingConfirmation("bookingId", "tripId", request.getPassengerCount(), 200.0, LocalDateTime.now(), "provider");
    }

    @Override
    public CancellationResult cancelTrip(String bookingId) {
        // Implement the logic to cancel a trip using the bookingId
        // This is a placeholder implementation
        return new CancellationResult(bookingId, true, "Cancellation successful");
    }
}